--- a/EasySeats.form
+++ b/EasySeats.form
@@ -293,9 +293,11 @@
             <Component class="javax.swing.JComboBox" name="jComboBox2">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                  <StringArray count="2">
+                  <StringArray count="4">
                     <StringItem index="0" value="Easyseat 1"/>
                     <StringItem index="1" value="Easyseat 2"/>
+                    <StringItem index="2" value="Easyseat 3"/>
+                    <StringItem index="3" value="Easyseat 4"/>
                   </StringArray>
                 </Property>
               </Properties>
